--- a/sc_trails.html
+++ b/sc_trails.html
@@ -60,7 +60,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="self" class="d-flex justify-content-center align-items-center">
+  <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Learning Today,<br>Leading Tomorrow</h1>
       <h2>We are team of talented Trainers helping you to shape your future</h2>
